--- a/iface_user/app/views/moocs/_form.html.erb
+++ b/iface_user/app/views/moocs/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :nom %><br>
+    <%= f.text_field :nom %>
+  </div>
+  <div class="field">
     <%= f.label :auteur %><br>
     <%= f.text_field :auteur %>
   </div>
@@ -28,6 +32,6 @@
     <%= f.text_field :bdd_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit value="Sauvegarder" %>
   </div>
 <% end %>
