--- a/iface_user/app/views/moocs/index.html.erb
+++ b/iface_user/app/views/moocs/index.html.erb
@@ -2,45 +2,18 @@
 
 <h1>Listing Moocs</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Auteur</th>
-      <th>Id cours</th>
-      <th>Periode</th>
-      <th>Bdd</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @moocs.each do |mooc| %>
-      <tr>
-        <td><%= mooc.auteur %></td>
-        <td><%= mooc.id_cours %></td>
-        <td><%= mooc.periode %></td>
-        <td><%= mooc.bdd %></td>
-        <td><%= link_to 'Show', mooc %></td>
-        <td><%= link_to 'Edit', edit_mooc_path(mooc) %></td>
-        <td><%= link_to 'Destroy', mooc, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<li>
-  <% @moocs.each do |mooc| %>
-    <ul><%= mooc.bdd%></ul>
-  <% end %>
-</li>
-
-<!--form>
-    <select>
+<form id="select_mooc">
+  <select>
       <% @moocs.each do |mooc| %>
-          <option><%= mooc.bdd%></option>
+        <option value="<%=mooc.id%>" onclick="loadMOOC(<%=mooc.id%>)"><%= mooc.nom%></option>
       <% end %>
   </select>
-</form-->
-
-<br>
+</form>
 
 <%= link_to 'New Mooc', new_mooc_path %>
+<br>
+
+
+<hr>
+
+<div id="info_mooc"></div>
