--- a/iface_user/app/views/layouts/application.html.erb
+++ b/iface_user/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FunLogs</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+<title>FunLogs</title>
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
-
+<%= nav_bar fixed: :top, brand: 'Logs FUN', brand_link: root_path do %>
+  <%= menu_group do %>
+  <%= menu_item "MOOCs", moocs_path %>
+  <%end%>
+<%= menu_group pull: :right do %>
+<%= menu_item "Connexion" %>
+<%= menu_item "Déconnexion" %>
+  <%end%>
+<%end%>
+<%= nav_bar do %><% end %>
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
