--- a/iface_user/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/iface_user/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -1,7 +1,14 @@
 /*
   =require twitter-bootstrap-static/bootstrap
+  =require jquery-ui
 
   Use Font Awesome icons (default)
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
   =require twitter-bootstrap-static/fontawesome
   */
+
+
+.btn-group{
+	margin-top: 10px;
+	margin-left: 35px;
+}
