--- a/iface_user/app/views/layouts/application.html.erb
+++ b/iface_user/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>FunLogs</title>
+<title>EleFUN</title>
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= nav_bar fixed: :top, brand: 'Logs FUN', brand_link: root_path do %>
+<%= nav_bar fixed: :top, brand: 'EleFUN', brand_link: root_path do %>
   <%= menu_group do %>
   <%= menu_item "MOOCs", moocs_path %>
   <%end%>
