--- a/iface_user/app/views/moocs/_showmooc.html.erb
+++ b/iface_user/app/views/moocs/_showmooc.html.erb
@@ -26,6 +26,6 @@
 <div class='raw'>
   <div class='btn-group' role='group'>
     <button id="editmooc" class='btn btn-primary btn-xs' onclick="editMOOC(<%= @mooc.id %>)">Modifier</button>
-    <%= link_to 'Destroy', @mooc, method: :delete, class: 'btn btn-warning btn-xs', data: { confirm: 'Êtes-vous sûr ?' } %>
+    <%= link_to 'Supprimer', @mooc, method: :delete, class: 'btn btn-warning btn-xs', data: { confirm: 'Êtes-vous sûr ?' } %>
   </div>
 </div>
