Ajout du chargement de a liste des scripts au chargement de la page

--- a/iface_user/app/views/moocs/show.html.erb
+++ b/iface_user/app/views/moocs/show.html.erb
@@ -34,7 +34,7 @@
       </tbody>
     </table>
     <button id="run-all" class="btn btn-success">Lancer tous les scripts</button>
-    <script>prepareScript()</script>
+    <script>prepareScript();affichageScripts();</script>
     </li>
   </ul>
 </div>
