2-3 modifs avant merge propre2-3 modifs avant merge propre

--- a/iface_user/app/views/moocs/show.html.erb
+++ b/iface_user/app/views/moocs/show.html.erb
@@ -1,5 +1,5 @@
 <div class='panel panel-default'>
-  <div class='panel panel-heading'><%= @mooc.nom %></div>
+  <h2 class='panel panel-heading'><%= @mooc.nom %></h2>
   <ul class='list-group'>
     <li id="mooc" class='list-group-item'>
     <%= render 'moocs/showmooc' %>
